fixed spacing in footer

--- a/css/sticky-footer-navbar.css
+++ b/css/sticky-footer-navbar.css
@@ -126,7 +126,7 @@ span, span small {
   height: 250px;
   background-color: #1f2849;
   border-top: 5px solid #ed9b09;
-  padding-top: 2rem;
+  padding-top: 1.5rem;
   padding-bottom: 1rem;
 }
 
